# Audytstrony

./: .env.example  .gitignore  CHANGELOG.md  DECLARATION_OF_SERVICE.md  MERGE_SUMMARY.md  QUICKSTART.md  README.md  install.sh  main.py  pyproject.toml  requirements.txt
ALFA-Plugins/: README.md
ALFA-Plugins/code-assistant/: __init__.py  handlers.py  plugin.json
ALFA-Plugins/web-scraper/: __init__.py  handlers.py  plugin.json
agent/: __init__.py  cli.py
agent/config/: __init__.py  settings.py
agent/core/: __init__.py  agent.py  ollama_client.py  scheduler.py
agent/modules/: __init__.py  automation.py  communication.py  file_generator.py  programs.py  vision.py  voice.py  web_audit.py
browser-extension/: README.md  manifest.json
browser-extension/src/background/: background.js
browser-extension/src/content/: content.js
browser-extension/src/lib/: appGenerator.js  ollama.js
browser-extension/src/popup/: popup.html  popup.js
browser-extension/src/sidepanel/: sidepanel.html  sidepanel.js
browser-extension/src/styles/: content.css  popup.css  sidepanel.css
docs/: README.md  contributing.md  installation.md  plugins.md
ollama-plugins/: README.md
ollama-plugins/models/codellama/: config.json
ollama-plugins/models/llama3/: config.json
ollama-plugins/templates/code/: generation.json
ollama-plugins/tools/: model_switcher.py
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
