[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-agent"
version = "1.0.0"
description = "Pełnoprawny agent AI oparty na Ollama z możliwościami automatyzacji"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ollama Agent Team"}
]
keywords = ["ollama", "ai", "agent", "automation", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "ollama>=0.1.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.0",
    "mss>=9.0.0",
    "pyautogui>=0.9.54",
    "speechrecognition>=3.10.0",
    "pyttsx3>=2.90",
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "fpdf2>=2.7.0",
    "python-pptx>=0.6.21",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "pygments>=2.17.0",
    "schedule>=1.2.0",
    "apscheduler>=3.10.0",
    "psutil>=5.9.0",
    "keyboard>=0.13.5",
    "dnspython>=2.4.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "loguru>=0.7.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]
voice = [
    "pyaudio>=0.2.14",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
]
social = [
    "tweepy>=4.14.0",
    "facebook-sdk>=3.1.0",
    "instagrapi>=2.0.0",
    "python-telegram-bot>=20.0",
]
all = [
    "ollama-agent[dev,voice,social]",
]

[project.scripts]
ollama-agent = "agent.cli:main"

[project.urls]
Homepage = "https://github.com/your-repo/ollama-agent"
Documentation = "https://github.com/your-repo/ollama-agent#readme"
Repository = "https://github.com/your-repo/ollama-agent"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
